--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^7.4.3",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.15",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
